// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders a array field 1`] = `
<div
  className="ArrayWidget"
/>
`;

exports[`Field renders a boolean field 1`] = `
<div
  className="CheckboxWidget"
/>
`;

exports[`Field renders a datetime field 1`] = `
<div
  className="DatetimeWidget"
/>
`;

exports[`Field renders a fallback field 1`] = `
<div
  className="TextWidget"
/>
`;

exports[`Field renders a password field 1`] = `
<div
  className="PasswordWidget"
/>
`;

exports[`Field renders a richtext field 1`] = `
<div
  className="WysiwygWidget"
/>
`;

exports[`Field renders a select field 1`] = `
<div
  className="SelectWidget"
/>
`;

exports[`Field renders a text field 1`] = `
<div
  className="TextWidget"
/>
`;

exports[`Field renders a textarea field 1`] = `
<div
  className="TextareaWidget"
/>
`;
